chore: add dependencies & update handler and io manager

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,17 @@ readme = "README.md"
 packages = [{ include = "dagster_pyiceberg", from = "src" }]
 
 [tool.poetry.dependencies]
-python = "^3.10,<4.0"
-pyiceberg = "^0.7.1"
+python = "^3.10,<3.13"
+pyiceberg = {extras = ["daft"], version = "^0.7.1"}
+dagster = "^1.8.2"
+dagit = "^1.8.2"
+pandas = "^2.2.2"
+getdaft = "^0.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.8.0"
+ipykernel = "^6.29.5"
 
 [build-system]
 requires = ["poetry-core"]
