--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ getdaft = "^0.3.0"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.8.0"
 ipykernel = "^6.29.5"
+pytest = "^8.3.2"
 
 [build-system]
 requires = ["poetry-core"]
@@ -62,4 +63,3 @@ extend-exclude = [
   ".nox",
   ".notebooks"
 ]
-
