--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dagster = "^1.8.2"
 dagit = "^1.8.2"
 pandas = "^2.2.2"
 getdaft = "^0.3.0"
+pendulum = "^3.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
