refactor: use uv

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,1 +1,1 @@
-FROM --platform=linux/arm64  jhginn/devcontainer:linux-arm64-ubuntu2204-py310-20240807-just
+FROM  --platform=arm64 jhginn/devcontainer:linux-arm64-ubuntu2204-pyuv311-20240827-just
