--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,15 @@ dependencies = [
     "pendulum>=3.0.0",
 ]
 
+[tool.uv]
+dev-dependencies = [
+    "pre-commit>=3.8.0",
+    "ipykernel>=6.29.5",
+    "pytest>=8.3.2",
+    "numpy<=2.0.0",
+    "pandas>=2.2.2",
+]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
@@ -58,10 +67,5 @@ extend-exclude = [
   ".notebooks"
 ]
 
-[tool.uv]
-dev-dependencies = [
-    "pre-commit>=3.8.0",
-    "ipykernel>=6.29.5",
-    "pytest>=8.3.2",
-    "numpy<=2.0.0",
-]
+[tool.pytest]
+cache_dir = "/home/vscode/workspace/.cache/pytest"
