chore: update paths

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
 FROM  --platform=arm64 jhginn/devcontainer:linux-arm64-ubuntu2204-pyuv311-20240827-just
 
-ENV RUFF_CACHE_DIR=/home/vscode/workspace/.cache/ruff
-ENV MYPY_CACHE_DIR=/home/vscode/workspace/.cache/mypy
+ENV RUFF_CACHE_DIR=$HOME/workspace/.cache/ruff
+ENV MYPY_CACHE_DIR=$HOME/workspace/.cache/mypy
