--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ dev-dependencies = [
     "pandas>=2.2.2",
 ]
 
+[tool.uv.sources]
+pyiceberg = { git = "https://github.com/apache/iceberg-python", rev = "09ec814" }
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
