--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dev-dependencies = [
     "ipykernel>=6.29.5",
     "pytest>=8.3.2",
     "pandas>=2.2.2",
+    "pyright>=1.1.385",
 ]
 
 [tool.uv.sources]
