chore: remove pyright as a hook

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,3 +76,5 @@ cache_dir = "/home/vscode/workspace/.cache/pytest"
 [tool.pyright]
 include = ["src"]
 pythonVersion = "3.11"
+venvPath = "."
+venv = ".venv"
