--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,13 +36,9 @@ repos:
       - id: isort
         args: ["--profile", "black", "--filter-files"]
 
-  # - repo: https://github.com/pre-commit/mirrors-mypy
-  #   rev: v1.8.0
-  #   hooks:
-  #     - id: mypy
-  #       additional_dependencies: ['types-PyYAML', 'types-decorator', 'types-requests', 'types-pytz', 'types-cachetools']
-  - repo: https://github.com/RobertCraigie/pyright-python
-    rev: v1.1.385
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.8.0
     hooks:
-    - id: pyright
+      - id: mypy
+        additional_dependencies: ['types-PyYAML', 'types-decorator', 'types-requests', 'types-pytz', 'types-cachetools']
 exclude: 'static/'
