--- a/packages/dagster_pyiceberg_pandas/pyproject.toml
+++ b/packages/dagster_pyiceberg_pandas/pyproject.toml
@@ -9,6 +9,7 @@ requires-python = ">=3.10"
 readme = "README.md"
 dependencies = [
     "dagster-pyiceberg",
+    "pandas>=2.2.3",
 ]
 
 [build-system]
