--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,6 +30,7 @@ jobs:
       - name: 'Pyright type checks'
         uses: ./.github/workflows/templates/pyright_type_checks
         with:
+          uv_version: "0.4.12"
           python_version: "3.11"
           pyright_version: "1.1.385"
   tests:
