--- a/packages/dagster_pyiceberg/pyproject.toml
+++ b/packages/dagster_pyiceberg/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "dagster>=1.8.2",
     "dagit>=1.8.2",
     "pendulum>=3.0.0",
+    "tenacity>=8.5.0",
 ]
 
 [tool.uv.sources]
