--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,7 @@ authors = [
 ]
 requires-python = ">=3.10"
 readme = "README.md"
-dependencies = [
-    "tenacity>=8.5.0",
-]
+dependencies = []
 
 [tool.uv]
 dev-dependencies = [
