--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,14 +11,16 @@ dependencies = []
 
 [tool.uv]
 dev-dependencies = [
-    "pre-commit>=3.8.0",
-    "ipykernel>=6.29.5",
-    "pytest>=8.3.2",
-    "pyright>=1.1.385",
     # These are added as dev dependencies becuase they should be available
     #  when developing the project.
     "dagster_pyiceberg",
     "dagster_pyiceberg_pandas",
+    "dagster_pyiceberg_polars",
+    # END WORKSPACE_PACKAGES
+    "pre-commit>=3.8.0",
+    "ipykernel>=6.29.5",
+    "pytest>=8.3.2",
+    "pyright>=1.1.385",
     "pytest-coverage>=0.0",
 ]
 package = false
@@ -31,6 +33,7 @@ members = [
 [tool.uv.sources]
 dagster_pyiceberg = { workspace = true }
 dagster_pyiceberg_pandas = { workspace = true }
+dagster_pyiceberg_polars = { workspace = true }
 
 [tool.black]
 line-length = 88
