--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ dev-dependencies = [
     "pytest>=8.3.2",
     "pyright>=1.1.385",
     "pytest-coverage>=0.0",
+    "testcontainers[postgres]>=4.8.2",
+    "psycopg2-binary>=2.9.10",
 ]
 package = false
 
