--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ nav:
   - Installation: installation.md
   - Quickstart: quickstart.md
   - Reference: reference.md
-  - Developing: developing.md
+  - Developing: development.md
   - Examples:
     - Pandas: examples/pandas.md
     - Polars: examples/polars.md
