--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,6 +36,9 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     needs: checks
+    strategy:
+      matrix:
+        python_version: ["3.9", "3.10", "3.11"]
     steps:
       - name: checkout
         uses: actions/checkout@v4
@@ -43,5 +46,5 @@ jobs:
         uses: ./.github/workflows/templates/tests
         with:
           uv_version: "0.4.27"
-          python_version: "3.11"
+          python_version: ${{ matrix.python_version }}
           directory: "tests"
