build: add classifiers

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,4 +96,5 @@ dev = [
     "pytest-coverage>=0.0",
     "testcontainers[postgres]>=4.8.2",
     "psycopg2-binary>=2.9.10",
+    #"cachetools>=5.5.0",
 ]
