--- a/packages/dagster_pyiceberg/pyproject.toml
+++ b/packages/dagster_pyiceberg/pyproject.toml
@@ -10,14 +10,31 @@ readme = "README.md"
 dependencies = [
     "pyiceberg[pyarrow]>=0.7.1",
     "dagster>=1.8.2",
-    "dagit>=1.8.2",
     "pendulum>=3.0.0",
     "tenacity>=8.5.0",
+    "cachetools>=5.5.0",
 ]
-
-[tool.uv.sources]
-pyiceberg = { git = "https://github.com/apache/iceberg-python", rev = "09ec814" }
+maintainers = [
+  {name="Jasper Ginn", email="jasperginn@gmail.com"}
+]
+license = {file = "LICENSE.txt"}
+classifiers = [
+  "Development Status :: 3 - Alpha",
+  "Intended Audience :: Developers",
+  "License :: OSI Approved :: Apache Software License",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12"
+]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[project.urls]
+Homepage = "https://jasperhg90.github.io/dagster-pyiceberg/"
+Documentation = "https://jasperhg90.github.io/dagster-pyiceberg/"
+Repository = "https://github.com/JasperHG90/dagster-pyiceberg"
+"Bug Tracker" = "https://github.com/JasperHG90/dagster-pyiceberg/issues"
