--- a/packages/dagster_pyiceberg_polars/pyproject.toml
+++ b/packages/dagster_pyiceberg_polars/pyproject.toml
@@ -11,7 +11,27 @@ dependencies = [
     "dagster-pyiceberg",
     "polars>=1.11.0",
 ]
+maintainers = [
+  {name="Jasper Ginn", email="jasperginn@gmail.com"}
+]
+license = {file = "LICENSE.txt"}
+classifiers = [
+  "Development Status :: 3 - Alpha",
+  "Intended Audience :: Developers",
+  "License :: OSI Approved :: Apache Software License",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12"
+]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[project.urls]
+Homepage = "https://jasperhg90.github.io/dagster-pyiceberg/"
+Documentation = "https://jasperhg90.github.io/dagster-pyiceberg/"
+Repository = "https://github.com/JasperHG90/dagster-pyiceberg"
+"Bug Tracker" = "https://github.com/JasperHG90/dagster-pyiceberg/issues"
