--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,3 +27,27 @@ jobs:
           python_version: '3.11'
           uv_version: '0.4.27'
           path_to_packages: './packages'
+      - name: Upload wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: libs
+          path: ./dist
+  publish:
+    runs-on: ubuntu-latest
+    needs: build
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Download wheels
+        uses: actions/download-artifact@v4
+        with:
+          name: libs
+          path: .
+      - name: 'Get version'
+        id: version
+        uses: JasperHG90/git-version@v4
+      - name: Publish python packages
+        run: |
+          gh release upload ${{ steps.version.outputs.version }} ./dist/*
