--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,11 +1,8 @@
 name: deploy-docs
 
 on:
-  # Runs on pushes targeting the default branch
-  push:
-    branches: [$default-branch]
-
-  # Allows you to run this workflow manually from the Actions tab
+  release:
+    types: [ "published" ]
   workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
