--- a/packages/dagster_pyiceberg_pandas/pyproject.toml
+++ b/packages/dagster_pyiceberg_pandas/pyproject.toml
@@ -18,6 +18,7 @@ license = {file = "LICENSE.txt"}
 classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Developers",
+  "Operating System :: OS Independent",
   "License :: OSI Approved :: Apache Software License",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.9",
