--- a/.github/workflows/templates/pyright_type_checks/action.yaml
+++ b/.github/workflows/templates/pyright_type_checks/action.yaml
@@ -24,7 +24,9 @@ runs:
     - name: Install uv
       uses: astral-sh/setup-uv@v2
       with:
-        uv-version: ${{ inputs.uv_version }}
+        version: ${{ inputs.uv_version }}
+        enable-cache: true
+        cache-dependency-glob: "uv.lock"
     - name: install dependencies
       run: |
         uv sync --all-extras
