--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 requires-python = ">=3.10"
 readme = "README.md"
 dependencies = [
-    "pyiceberg[pyarrow]>=0.7.1",
+    "pyiceberg[pyarrow]==0.8.0rc1",
     "dagster>=1.8.2",
     "pendulum>=3.0.0",
     "tenacity>=8.5.0",
@@ -28,9 +28,6 @@ classifiers = [
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12"
 ]
-
-[tool.uv.sources]
-pyiceberg = { git = "https://github.com/apache/iceberg-python", rev = "0cebec4" }
 
 [build-system]
 requires = ["hatchling"]
