--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,7 +26,7 @@ jobs:
         with:
           python_version: "3.11"
           pre_commit_version: "4.0.1"
-          directory: "."
+          directory: "src"
       - name: 'Pyright type checks'
         uses: ./.github/workflows/templates/pyright_type_checks
         with:
