--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,7 +42,29 @@ plugins:
     handlers:
       python:
         paths:
-        - packages/dagster_pyiceberg
-        - packages/dagster_pyiceberg_pandas
-        - packages/dagster_pyiceberg_polars
+        - src/dagster_pyiceberg
+        options:
+          docstring_options:
+            ignore_init_summary: true
+          docstring_section_style: list
+          filters: ["!^_"]
+          heading_level: 1
+          inherited_members: true
+          merge_init_into_class: true
+          parameter_headings: true
+          preload_modules: [mkdocstrings]
+          relative_crossrefs: true
+          scoped_crossrefs: true
+          separate_signature: true
+          show_bases: false
+          show_inheritance_diagram: true
+          show_root_heading: true
+          show_root_full_path: false
+          show_signature_annotations: true
+          show_source: false
+          show_symbol_type_heading: true
+          show_symbol_type_toc: true
+          signature_crossrefs: true
+          summary: true
+          unwrap_annotated: true
 - include-markdown
