--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,9 +1,11 @@
 name: deploy-docs
 
 on:
+  workflow_dispatch:
+    branches:
+      - main
   release:
     types: [ "published" ]
-  workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
