--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,9 +59,9 @@ plugins:
           show_bases: false
           show_inheritance_diagram: true
           show_root_heading: true
-          show_root_full_path: false
+          show_root_full_path: true
           show_signature_annotations: true
-          show_source: false
+          show_source: true
           show_symbol_type_heading: true
           show_symbol_type_toc: true
           signature_crossrefs: true
