--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 requires-python = ">=3.10"
 readme = "README.md"
 dependencies = [
-    "pyiceberg[pyarrow]==0.8.0rc1",
+    "pyiceberg[pyarrow]>=0.8",
     "dagster>=1.8.2",
     "pendulum>=3.0.0",
     "tenacity>=8.5.0",
