--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,11 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
 
+  - repo: https://github.com/astral-sh/uv-pre-commit
+    rev: 0.5.4
+    hooks:
+      - id: uv-lock
+
   - repo: https://github.com/econchick/interrogate
     rev: "1.7.0"
     hooks:
@@ -36,9 +41,14 @@ repos:
       - id: isort
         args: ["--profile", "black", "--filter-files"]
 
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.8.0
+  - repo: https://github.com/RobertCraigie/pyright-python
+    rev: v1.1.390
     hooks:
-      - id: mypy
-        additional_dependencies: ['types-PyYAML', 'types-decorator', 'types-requests', 'types-pytz', 'types-cachetools']
-exclude: 'static/'
+      - id: pyright
+
+#   - repo: https://github.com/pre-commit/mirrors-mypy
+#     rev: v1.8.0
+#     hooks:
+#       - id: mypy
+#         additional_dependencies: ['types-PyYAML', 'types-decorator', 'types-requests', 'types-pytz', 'types-cachetools']
+# exclude: 'static/'
